--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/chiijlaw/dog-food-calculator#readme",
   "devDependencies": {
+    "css-loader": "^2.1.0",
     "nodemon": "^1.18.9",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   },
