--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "webpack --config webpack.config.js -d --watch"
+    "build-dev": "webpack --config webpack.config.js -d --watch",
+    "build": "webpack --config webpack.config.js -p"
   },
   "repository": {
     "type": "git",
